// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with 1 expense 1`] = `
<Fragment>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</Fragment>
`;

exports[`should correctly render expensesSummary with multiple expenses 1`] = `
<Fragment>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,123,409.87
  </h1>
</Fragment>
`;
